// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtensionCount should render default element 1`] = `
<Fragment>
  <Popup
    attachmentBehavior="auto"
    boundingRef={null}
    classNameArrow={null}
    classNameContent={null}
    classNameOverlay={null}
    contentAttachment="top center"
    contentHeight="auto"
    contentWidth="320"
    isArrowDisplayed={true}
    isContentFocusDisabled={false}
    isHeaderDisabled={false}
    isOpen={false}
    onRequestClose={[Function]}
    targetRef={[Function]}
  >
    <PopupMenu
      header={
        <ActionHeader
          level={1}
          title="Extensions"
        />
      }
      menuItems={Array []}
      onSelectMenuItem={[Function]}
    />
  </Popup>
  <div
    className="extensions-row"
  />
</Fragment>
`;

exports[`ExtensionCount should render prop data 1`] = `
<Fragment>
  <Popup
    attachmentBehavior="auto"
    boundingRef={null}
    classNameArrow={null}
    classNameContent={null}
    classNameOverlay={null}
    contentAttachment="top right"
    contentHeight="auto"
    contentWidth="320"
    isArrowDisplayed={true}
    isContentFocusDisabled={false}
    isHeaderDisabled={false}
    isOpen={false}
    onRequestClose={[Function]}
    targetAttachment="bottom center"
    targetRef={[Function]}
  >
    <PopupMenu
      header={
        <ActionHeader
          level={1}
          title="Extensions"
        />
      }
      menuItems={Array []}
      onSelectMenuItem={[Function]}
    />
  </Popup>
  <div
    className="extensions-row"
  >
    <Extension
      extensionKey="my-test-key"
      icon={
        <span>
          my icon
        </span>
      }
      key="my-test-key"
      notificationCount={0}
      onRequestClose={[Function]}
      onSelect={[MockFunction]}
      text="test-text"
    />
  </div>
</Fragment>
`;
